# Field-Map-Editor

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  Field-Map-Editor_SFML.toml  Field-Map-Editor_SFML_imgui.ini  README.md  appveyor.yml  changelog.md  conanfile.py  conanfile.txt.backup  error.txt  fix_deswizzle_toml.py  format.ps1  update-canary-tag.bat  vcpkg-configuration.json  vcpkg.json
src/imgui/: CMakeLists.txt  GuiBatch.cpp  GuiBatch.hpp  PupuID.hpp  append_inserter.hpp  archives_group.cpp  archives_group.hpp  dialog.hpp  events.hpp  filebrowser.hpp  filter.hpp  format_imgui_text.hpp  generic_combo.hpp  grid.cpp  grid.hpp  gui.cpp  gui.hpp  gui_labels.hpp  imgui_format_text.hpp  map_sprite.cpp  map_sprite.hpp  mim_sprite.cpp  mim_sprite.hpp  scope_guard.hpp  test.cpp  tile_map.hpp  unique_values.hpp  upscales.cpp  upscales.hpp
src/imgui/fme/: CMakeLists.txt  GuiBatch.cpp  PupuID.hpp  append_inserter.hpp  archives_group.cpp  archives_group.hpp  filter.hpp  formatters.hpp  generic_combo.hpp  grid.cpp  grid.hpp  gui.cpp  gui_labels.hpp  map_sprite.cpp  map_sprite.hpp  mim_sprite.cpp  mim_sprite.hpp
src/imgui/opengl/: CMakeLists.txt  main.cpp
src/imgui/opengl/episode_1/: CMakeLists.txt  main.cpp
src/imgui/opengl/episode_10/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  VertexBuffer.cpp  main.cpp
src/imgui/opengl/episode_11/: CMakeLists.txt  scope_guard.hpp
src/imgui/opengl/episode_12/: CMakeLists.txt  IndexBuffer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  main.cpp
src/imgui/opengl/episode_13/: CMakeLists.txt  main.cpp  scope_guard.hpp
src/imgui/opengl/episode_14/: CMakeLists.txt  Renderer.hpp  Shader.cpp  Shader.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/imgui/opengl/episode_15/: Shader.hpp  (+3 more)
src/opengl/: CMakeLists.txt
src/opengl/experimental/: Application.cpp  Application.hpp  CMakeLists.txt  Changed.hpp  ImGuiDisabled.cpp  ImGuiDisabled.hpp  ImGuiIndent.hpp  ImGuiPushID.cpp  ImGuiPushID.hpp  ImGuiPushItemWidth.cpp  ImGuiPushItemWidth.hpp  ImGuiPushStyleVar.cpp  ImGuiPushStyleVar.hpp  ImGuiViewPortPreview.hpp  ImGuiViewPortWindow.cpp  ImGuiViewPortWindow.hpp  Menu.cpp  Menu.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Window.cpp  Window.hpp  main.cpp
src/opengl/ff_8/: CMakeLists.txt
src/opengl/glengine/: BatchRenderer.cpp  BatchRenderer.hpp  BlendModeEquation.hpp  BlendModeEquations.hpp  BlendModeGeneric.hpp  BlendModeParameter.hpp  BlendModeParameters.hpp  BlendModeSettings.cpp  BlendModeSettings.hpp  CMakeLists.txt  CompShader.cpp  CompShader.hpp  Counter.cpp  Counter.hpp  DelayedTextures.hpp  DistanceBuffer.cpp  Formatters.hpp  FrameBuffer.cpp  FrameBuffer.hpp  FrameBufferBackup.cpp  FrameBufferBackup.hpp  FrameBufferRenderer.cpp  FrameBufferRenderer.hpp  GLCheck.cpp  GLCheck.hpp  GenericCombo.hpp  HistogramBuffer.cpp  HistogramBuffer.hpp  ImGuiDisabled.cpp  ImGuiDisabled.hpp  ImGuiIndent.cpp  ImGuiIndent.hpp  ImGuiPushID.cpp  ImGuiPushID.hpp  ImGuiPushItemWidth.cpp  ImGuiPushItemWidth.hpp  ImGuiPushStyleVar.cpp  ImGuiPushStyleVar.hpp  ImGuiViewPortPreview.cpp  ImGuiViewPortPreview.hpp  (+52 more)
src/opengl/imgui_utils/: CMakeLists.txt
src/opengl/main/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  EmptyStringIterator.hpp  MapHistory.cpp  MapHistory.hpp  Paths.hpp  PupuID.cpp  PupuID.hpp  RangeConsumer.hpp  UniquifyPupu.cpp  UniquifyPupu.hpp  append_inserter.hpp  archives_group.cpp  archives_group.hpp  draw_bit_t.hpp  filebrowser.hpp  filter.hpp  format_imgui_text.hpp  formatters.hpp  future_operations.cpp  future_operations.hpp  generic_combo.cpp  generic_combo.hpp  main.cpp  map_group.cpp  map_group.hpp  map_operation.cpp  map_operation.hpp  map_sprite.cpp  map_sprite.hpp  map_textures.cpp  map_textures.hpp  mim_sprite.cpp  mim_sprite.hpp  normalized_source_tile.hpp  open_file_explorer.cpp  open_file_explorer.hpp  path_search.cpp  path_search.hpp  (+13 more)
src/opengl/opengl_version/: Application.cpp  Application.hpp  CMakeLists.txt  Changed.hpp  ImGuiDisabled.cpp  ImGuiIndent.hpp  ImGuiPushID.cpp  ImGuiPushItemWidth.cpp  ImGuiPushStyleVar.cpp  ImGuiPushStyleVar.hpp  ImGuiViewPortWindow.hpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  Window.cpp  Window.hpp  main.cpp
src/opengl/sfml/: Configuration.cpp  EmptyStringIterator.hpp  MapHistory.hpp  PupuID.cpp  future_operations.hpp  map_sprite.cpp  path_search.cpp  path_search.hpp  utilities.hpp
src/opengl/stbi/: CMakeLists.txt  stbi.cpp
src/sfml/: CMakeLists.txt  Configuration.cpp  Configuration.hpp  GuiBatch.cpp  GuiBatch.hpp  MapHistory.cpp  MapHistory.hpp  PupuID.cpp  PupuID.hpp  RangeConsumer.hpp  RangeHolder.hpp  UniquifyPupu.cpp  UniquifyPupu.hpp  append_inserter.hpp  archives_group.cpp  archives_group.hpp  events.cpp  events.hpp  filter.hpp  format_imgui_text.hpp  formatters.cpp  formatters.hpp  future_operations.cpp  future_operations.hpp  generic_combo.hpp  grid.hpp  gui.cpp  gui.hpp  gui_labels.hpp  main.cpp  map_group.cpp  map_group.hpp  map_operation.cpp  map_operation.hpp  map_sprite.cpp  map_sprite.hpp  mim_sprite.cpp  mim_sprite.hpp  normalized_source_tile.hpp  open_file_explorer.cpp  (+22 more)
src/sfml/gui/: GuiBatch.cpp  Selections.cpp  Selections.hpp  as_string.hpp  batch.cpp  batch.hpp  batch_deswizzle.cpp  batch_deswizzle.hpp  batch_embed.cpp  batch_embed.hpp  batch_reswizzle.cpp  batch_reswizzle.hpp  collapsing_tile_info.cpp  collapsing_tile_info.hpp  colors.hpp  compact_type.hpp  create_tile_button.cpp  create_tile_button.hpp  custom_paths_window.cpp  custom_paths_window.hpp  draw_mode.hpp  fa_icons.hpp  field_file_window.hpp  gui.cpp  gui.hpp  gui_batch.cpp  gui_batch.hpp  gui_labels.hpp  history_window.cpp  history_window.hpp  import.cpp  import.hpp  key_value_data.cpp  key_value_data.hpp  main_menu_paths.hpp  map_dialog_mode.hpp  map_directory_mode.hpp  mouse_positions.cpp  mouse_positions.hpp  push_pop_id.cpp  (+7 more)
test/: CMakeLists.txt  UT_MapOperations.cpp  UT_TileOperationsTest.cpp  UT_source_tile_conflicts_test.cpp
(+584 files in other folders)
